[package]
name = "acsrs"
version = "0.1.0"
edition = "2021"
description = "A simple ACS written in rust"
readme = "README.md"
repository = "https://github.com/guillaumepellegrino/acrs"
license = "GPLv3"
authors = ["Guillaume Pellegrino"]
keywords = ["acs", "tr069", "cwmp", "network"]
categories = ["network-programming"]

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "*"
native-tls = "*"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
quick-xml = { version = "*", features = ["async-tokio", "serialize"] }
toml = "*"
digest_auth = "*"
http-body-util = "0.1.0-rc.2" 
bytes = "*"
futures = "*"
rand = "*"
regex = "*"
base64 = "*"
clap = { version = "*", features = ["cargo"] }
daemonize = "*"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
